<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rubik\'s Cube Trainer</string>
    <string name="username">Username</string>
    <string name="go">Go!</string>
    <string name="ok">OK</string>
    <string name="scan_your_own_cube">Scan your own cube</string>
    <string name="play_in_the_app">Play in the app</string>
    <string name="Continue">continue</string>
    <string name="top">Top</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="front">Front</string>
    <string name="left">Left</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
    <string name="login_page"><u><b>Login page</b></u></string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="cube">cube</string>
    <string name="title_activity_most_play">MostPlay</string>
    <string name="username_table"><u><b>Username</b></u></string>
    <string name="number_of_games_table"><u><b>Number of games</b></u></string>
    <string name="help">help</string>
    <string name="title_activity_notations">NotationsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_solving_methods">Solving Methods</string>
    <string name="notations_text">
        "Solving the cube involves following a set of moves."
        "To illustrate the moves we will use cube notations as listed below.\n"
        "Each of these moves is a 90 degree turn of the relevant pieces."
        "Each move also has a corresponding opposite move which is denoted with an apostrophe ( ' )."
        "In addition, a 180 degree turn of a face denoted with '2'. "
        "For example, a 180 degree turn of the up face is denoted as 'U2'."
    </string>
    <string name="beginner_algorithm_text">
        <b><u><font color='#FFBB86FC'>"The Beginner algorithm\n"</font></u></b>
        "The Beginner or Layer by Layer algorithm (LBL) divides the cube into layers and you solve each layer by using specific algorithms.\n"
        "Compared to other methods there are only a few algorithms to memorize, and they are relatively intuitive.\n"
        "This technique is perfect for beginners since it is the most accessible."
        "On the other hand, this method is not efficient for speedcubing. "
        "An average LBL solve is around 130 moves. "
        "If you want to achieve speeds under one minute, it is recommended to learn additional methods.\n"
        "You can read more information about the method in this"
        <a href="https://ruwix.com/the-rubiks-cube/how-to-solve-the-rubiks-cube-beginners-method/">link</a>
    </string>
    <string name="cfop_algorithm_text">
        <b><u><font color='#FFBB86FC'>"The CFOP algorithm\n"</font></u></b>
        "The most popular Speedsolving method is the CFOP (Cross, First 2 layers, Orientation of last layer, Permutation of last layer) ,"
        "also known as the Fridrich method. "
        "Unlike The beginner's method, the Speedsolving method focuses mainly about solving the Rubik's cube in the fastest "
        "and most efficient way, rather than the easiest way.\n"
        "The CFOP method average number of moves for a complete solution is ~56 moves."
        "This method is similar to the Beginner algorithm, however, it combines some of the steps, solving more of the cube at once.\n"
        "The method works on a layer-by-layer system, first solving a cross typically on the bottom, "
        "continuing to solve the first two layers (F2L), orienting the last layer (OLL), "
        "and finally permuting the last layer (PLL).\n"
        "You can read more information about the method in this"
        <a href="https://denzeltl.github.io/rubiks-cube-solution/">link</a>
    </string>
    <string name="koecimba_algorithm_text">
        <b><u><font color='#FFBB86FC'>"The Koecimba algorithm\n"</font></u></b>
        "Also called the Two-Phase Algorithm. Like its name, the algorithm solves the Cube in two phases "
        "and can solve it in 29 moves or less.\n"
        "In the first phase, the algorithm looks for maneuvers which will transform a scrambled cube to G1 group. "
        "This group is a subset of all possible cubes that we get if we turn the faces of a solved cube "
        "and don't use the moves that turn the right, left, front and back faces 90 degrees "
        "(but can move these faces 180 degrees). "
        "In this subset, pieces in the middle layer will stay in the middle layer without flipping, "
        "and pieces in the top and bottom layers can only exchange between those layers without twisting or flipping.\n"
        "In the second phase the algorithm restores the cube in the subgroup G1, using only moves of this subgroup. "
        "It restores the permutation of the 8 corners, the permutation of the 8 edges of the Up-face and Down-face "
        "and the permutation of the 4 UD-slice edges (the edges between the Up-face and Down-face).\n"
        "The algorithm doesn't stop when a first solution is found but continues to search for shorter solutions "
        "by carrying out phase 2 from suboptimal solutions of phase 1.\n"
        "You can read more information about the method in this"
        <a href="https://www.speedsolving.com/wiki/index.php/Kociemba%27s_Algorithm">link</a>
    </string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="SERVER_URL">"https://rubikscubeserver.herokuapp.com"</string>
</resources>
