<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScanningActivity">

    <Button
        android:id="@+id/top"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/top"
        app:layout_constraintBottom_toTopOf="@+id/front"
        app:layout_constraintEnd_toStartOf="@+id/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/right"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/right"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/front"
        app:layout_constraintTop_toBottomOf="@+id/left" />

    <Button
        android:id="@+id/bottom"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="@color/black"
        android:text="@string/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/right" />

    <Button
        android:id="@+id/front"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/front"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/left"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/left"
        app:layout_constraintBottom_toTopOf="@+id/right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/top"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/front"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="19dp"
        android:text="@string/Continue"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>