<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="30dp"
            android:autoSizeMinTextSize="5dp"
            android:autoSizeTextType="uniform"
            android:text="@string/username"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/play_in_the_app_button"
            android:layout_width="224dp"
            android:layout_height="62dp"
            android:background="@drawable/custom_button"
            android:minWidth="80dp"
            android:text="@string/play_in_the_app"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scan_button" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="224dp"
            android:layout_height="62dp"
            android:background="@drawable/custom_button"
            android:minWidth="80dp"
            android:text="@string/scan_your_own_cube"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/play_in_the_app_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>