<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    tools:context=".PlayingOptionsActivity">


    <TextView
        android:id="@+id/username"
        android:layout_width="404dp"
        android:layout_height="128dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="5dp"
        android:autoSizeTextType="uniform"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/play_in_the_app_button"
        android:layout_width="224dp"
        android:layout_height="62dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="103dp"
        android:text="@string/play_in_the_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="224dp"
        android:layout_height="62dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="103dp"
        android:text="@string/scan_your_own_cube"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="224dp"
        android:layout_height="62dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="103dp"
        android:text="statistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <Button
        android:id="@+id/logout"
        android:layout_width="224dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="84dp"
        android:background="@color/red"
        android:text="Log-out"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>