<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:fitsSystemWindows="true"
    android:background="@color/cardview_dark_background"
    tools:context=".SolvingMethodsExplanationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_solving_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="Solving Methods"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/beginner_algorithm_explanation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/beginner_algorithm_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/beginner_algorithm_text"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_solving_methods" />

        <TextView
            android:id="@+id/cfop_algorithm_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/cfop_algorithm_text"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginTop="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beginner_algorithm_explanation" />

        <TextView
            android:id="@+id/koecimba_algorithm_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/koecimba_algorithm_text"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginTop="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cfop_algorithm_explanation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>